# cobitis

./: .gitignore  Cargo.toml  README.md  compose.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: npm.yml  rust.yml
nginx/: Dockerfile
nginx/templates/: 10-site.conf.template  99-default.conf.template
postgres/initdb.d/: 10-create-function.sql  20-create-table.sql
pwa/: index.html  package-lock.json  package.json
pwa-api/: Cargo.toml  Dockerfile
pwa-api/src/: main.rs  service.rs
pwa-api/src/service/: models.rs  rest.rs  socketio.rs
pwa-api/src/utils/: pg.rs
pwa/public/: _worker.js  manifest.webmanifest  sw.js
pwa/src/: App.svelte
pwa/tools/: modify_sw.py
sensor-api/: Cargo.toml  Dockerfile
sensor-api/src/: service.rs  utils.rs
sensor-api/src/service/: models.rs  socketio.rs
src/: api.rs  display.rs  main.rs  measurements.rs  signal.rs
systemd/: cobitis.service
