[package]
name = "cobitis"
version = "0.1.0"
edition = "2024"

[dependencies]
ads1x1x = "0.3.0"
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
eg-bdf = { git = "https://github.com/embedded-graphics/bdf.git", branch = "master" }
eg-font-converter = { git = "https://github.com/embedded-graphics/bdf.git", branch = "master" }
embedded-graphics = "0.8.1"
linux-embedded-hal = "0.4.0"
logger = { git = "https://github.com/AkiraMiyakoda/rust-utils.git", branch = "main" }
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
ssd1306 = "0.10.0"
tokio = { version = "1.47.1", features = ["rt", "macros", "time", "sync"] }
toml = "0.9.8"

[profile.release]
strip = "symbols"
lto = true

[lints.clippy]
cast_possible_truncation = "deny"
manual_let_else = "deny"
map_unwrap_or = "deny"
match_wildcard_for_single_variants = "deny"
needless_raw_string_hashes = "deny"
semicolon_if_nothing_returned = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
wildcard_imports = "deny"
