[package]
name = "sensor-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.85"
argon2 = "0.5.3"
axum = "0.7.5"
chrono = "0.4.38"
log = "0.4.22"
logger = { git = "https://github.com/AkiraMiyakoda/rust-utils.git", rev = "9cfe3b5612e01bc7b00cb64cd70d3efe25aaffa4" }
secure-string = { version = "0.3.0", features = ["serde"] }
serde = { version = "1.0.205", features = ["derive"] }
socketioxide = "0.14.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["catch-panic"] }
uuid = { version = "1.10.0", features = ["serde"] }
